kiwix-tools 0.6.0
=================

kiwix-manage
------------

 * Returns proper exit code (not always 0)

kiwix-tools 0.5.0
=================

 * Build kiwix-tools setting the RPATH
 * Compile without warning.


kiwix-server
------------

 * Serve metadata information using the "/meta" url.
 * Serve an OPDS stream of all zim handled by kiwix-serve
   All informations cannot be infer from the zim file itself,
   you should use a library.xml to provide needed information (url, ...)
 * Update kiwix-serve to use the new API of kiwix-lib

kiwix-tools 0.4.0
=================

 * Use gcc-5 on travis.

kiwix-serve
-----------

 * Accept zim file with `&` in the name
 * Do not cache (on client side) global search (as it can depends on the zim
   files handled)
 * Fix HTTP byte range handling. (#91)
 * Fix opening of relative path (#70)
 * Add a small (and hidden) API to do geo search.
 * Better request parsing. (#91)
 * Better handling of invalid request (#116)
 * Various bug fixes (#146, #150, #153, #165, #168, #165)

kiwix-search
------------

 * Add an option `--suggestion` to do suggestion search with
   kiwix-search.(#132)

kiwix-tools 0.3.0
=================

 * Move to C++11

kiwix-serve
-----------

 * Add a global taskbar in the welcome page to search in all zims (#49)
 * Serve the taskbar as css file instead of including it in the html (#68):
   * Better client caching
   * The html encoding is now in the first 1024 bytes and firefox correctly
     detect the encoding
 * Make kiwix-server multi-threaded (#82)
 * Correctly return 404 instead of crashing when request inexistant skin file
   (#83)
 * Correctly respond to bytes-range requests.(#84)
 * Directly respond to first request for a url instead of refusing the first
   connexion
 * Add support to relative url location. (#86)
 * Remove caching (on client side) for the welcome page. (#86)


kiwix-tools 0.2.0
=================

 * Remove indexer tools

kiwix-serve
-----------
